test_output/ministral_test_output.txt
Error: You are trying to access a gated repo.
Make sure to have access to it at https://huggingface.co/mistralai/Ministral-8B-Instruct-2410.
401 Client Error. (Request ID: Root=1-6803c133-2a26cdbc0117b15d3c6f16cb;295948f5-33db-4266-ad72-c648ae2471f0)

Cannot access gated repo for url https://huggingface.co/mistralai/Ministral-8B-Instruct-2410/resolve/main/config.json.
Access to model mistralai/Ministral-8B-Instruct-2410 is restricted. You must have access to it and be authenticated to access it. Please log in.
Traceback (most recent call last):
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/utils/_http.py", line 409, in hf_raise_for_status
    response.raise_for_status()
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/requests/models.py", line 1024, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 401 Client Error: Unauthorized for url: https://huggingface.co/mistralai/Ministral-8B-Instruct-2410/resolve/main/config.json

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/transformers/utils/hub.py", line 424, in cached_files
    hf_hub_download(
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/utils/_validators.py", line 114, in _inner_fn
    return fn(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/file_download.py", line 961, in hf_hub_download
    return _hf_hub_download_to_cache_dir(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/file_download.py", line 1068, in _hf_hub_download_to_cache_dir
    _raise_on_head_call_error(head_call_error, force_download, local_files_only)
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/file_download.py", line 1596, in _raise_on_head_call_error
    raise head_call_error
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/file_download.py", line 1484, in _get_metadata_or_catch_error
    metadata = get_hf_file_metadata(
               ^^^^^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/utils/_validators.py", line 114, in _inner_fn
    return fn(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/file_download.py", line 1401, in get_hf_file_metadata
    r = _request_wrapper(
        ^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/file_download.py", line 285, in _request_wrapper
    response = _request_wrapper(
               ^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/file_download.py", line 309, in _request_wrapper
    hf_raise_for_status(response)
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/huggingface_hub/utils/_http.py", line 426, in hf_raise_for_status
    raise _format(GatedRepoError, message, response) from e
huggingface_hub.errors.GatedRepoError: 401 Client Error. (Request ID: Root=1-6803c133-2a26cdbc0117b15d3c6f16cb;295948f5-33db-4266-ad72-c648ae2471f0)

Cannot access gated repo for url https://huggingface.co/mistralai/Ministral-8B-Instruct-2410/resolve/main/config.json.
Access to model mistralai/Ministral-8B-Instruct-2410 is restricted. You must have access to it and be authenticated to access it. Please log in.

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "<string>", line 20, in <module>
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/transformers/models/auto/tokenization_auto.py", line 966, in from_pretrained
    config = AutoConfig.from_pretrained(
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/transformers/models/auto/configuration_auto.py", line 1114, in from_pretrained
    config_dict, unused_kwargs = PretrainedConfig.get_config_dict(pretrained_model_name_or_path, **kwargs)
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/transformers/configuration_utils.py", line 590, in get_config_dict
    config_dict, kwargs = cls._get_config_dict(pretrained_model_name_or_path, **kwargs)
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/transformers/configuration_utils.py", line 649, in _get_config_dict
    resolved_config_file = cached_file(
                           ^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/transformers/utils/hub.py", line 266, in cached_file
    file = cached_files(path_or_repo_id=path_or_repo_id, filenames=[filename], **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jarek/miniconda3/lib/python3.12/site-packages/transformers/utils/hub.py", line 481, in cached_files
    raise OSError(
OSError: You are trying to access a gated repo.
Make sure to have access to it at https://huggingface.co/mistralai/Ministral-8B-Instruct-2410.
401 Client Error. (Request ID: Root=1-6803c133-2a26cdbc0117b15d3c6f16cb;295948f5-33db-4266-ad72-c648ae2471f0)

Cannot access gated repo for url https://huggingface.co/mistralai/Ministral-8B-Instruct-2410/resolve/main/config.json.
Access to model mistralai/Ministral-8B-Instruct-2410 is restricted. You must have access to it and be authenticated to access it. Please log in.
Loading Ministral-8B-Instruct-2410 model...
